更新示例，添加readme

--- a/Test~/Editor/Azcel.Tests.Editor.asmdef
+++ b/Test~/Editor/Azcel.Tests.Editor.asmdef
@@ -3,6 +3,7 @@
     "rootNamespace": "Azcel.Tests",
     "references": [
         "Azcel",
+        "Azcel.Editor",
         "Azathrix.Framework.Runtime",
         "Azathrix.Framework.Editor",
         "UniTask"
