更新测试用例

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "samples": [
         {
-            "displayName": "Azcel 编辑器 API 测试示例",
+            "displayName": "Tests",
             "description": "编辑器下的 Azcel 基础 API 调用测试（不依赖配置转换）",
             "path": "Test~"
         }
