--- a/Tests~/Runtime/Azcel.Sample.Runtime.asmdef
+++ b/Tests~/Runtime/Azcel.Sample.Runtime.asmdef
@@ -2,7 +2,8 @@
     "name": "Azcel.Sample.Runtime",
     "rootNamespace": "Azcel.Sample",
     "references": [
-        "Azcel"
+        "Azcel",
+        "Azathrix.Framework.Runtime"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
